# outpost

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml  deploy.yml  pipeline.yml
analyzer_container/: Dockerfile  run_analysis.py
db/migrations/: 001_init.sql  002_takedowns_lock.sql
deploy/: .env.example  export-neon-db.sh  outpost-api.service  outpost-ct.service  outpost-pipeline.service  setup-elitedesk.sh
docs/: SCOPE_AND_ETHICS.md
frontend/: _redirects  actors.html  index.html  ioc.html
frontend/css/: style.css
frontend/js/: actors.js  app.js  charts.js  ioc.js
ops/: prometheus.yml
outpost/: .env.example
outpost/.github/workflows/: pipeline.yml
outpost/frontend/: index.html
outpost/frontend/js/: app.js  charts.js
outpost/src/pkintel/analyzer/: safe_extract.py
outpost/src/pkintel/api/: app.py
outpost/src/pkintel/cli/: __init__.py
outpost/tests/: test_triage.py
scratch/: test_send_email.py  triage_priority.py
src/pkintel/: __init__.py  config.py  db.py  http.py  logging.py  models.py  redact.py  storage.py
src/pkintel/analyzer/: __init__.py  deobfuscate.py  indicators.py  inventory.py  runner.py  safe_extract.py
src/pkintel/api/: __init__.py  app.py
src/pkintel/cli/: main.py  seed.py
src/pkintel/fingerprint/: __init__.py  cluster.py  metrics.py  runner.py  similarity.py  unionfind.py
src/pkintel/ingest/: base.py  ct.py  github.py  normalize.py  phishdb.py  phishstats.py  runner.py  threatfox.py  urlhaus.py  urlscan.py
src/pkintel/kithunter/: __init__.py  collect.py  logs.py  opendir.py  runner.py
src/pkintel/takedown/: __init__.py  mailer.py  rdap.py  runner.py  templates.py
src/pkintel/triage/: __init__.py  brand.py  favicon.py  fetch.py  forms.py  phash.py  runner.py  score.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_analyzer.py  test_fingerprint.py  test_ingest.py  test_kithunter.py  test_redact.py  test_takedown.py  test_triage.py
tests/fixtures/sample_kit/: index.html
(+10 files in other folders)
