[project]
name = "pkintel"
version = "0.1.0"
description = "Phishing-kit intelligence pipeline: ingest, triage, opportunistic kit collection, static dissection, actor clustering, and takedown."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Faseeh Padinjarathil", email = "security@heapleap.tech" }]

dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary,pool]>=3.2",
    "structlog>=24.1",
    "typer>=0.12",
    "tenacity>=8.4",
    "mmh3>=4.1",
    "Pillow>=10.3",
    "ImageHash>=4.3",
    "python-tlsh>=4.5",
    "networkx>=3.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-whois>=0.9",
    "boto3>=1.34",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
    "types-beautifulsoup4",
]

[project.scripts]
pkintel = "pkintel.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkintel"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "SIM"]
# S603/S607: subprocess use is deliberate & audited in analyzer container launch.
ignore = [
    "S101", "E501", "S105", "S608", "UP042",
    "SIM103", "SIM117", "F841", "S110", "S112",
    "E402", "B007", "C408"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires a live Postgres (set PKINTEL_DB_URL)",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
ignore_errors = true
